# Hospital-Kitchen-Optimization

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: airflow.cfg
dags/: ELT.py
src/hospital_kitchen_project/analysis/: Analise_preditiva.ipynb  EDA.ipynb  base_for_ML.ipynb
src/hospital_kitchen_project/analysis/.ipynb_checkpoints/: EDA-checkpoint.ipynb  Untitled-checkpoint.ipynb  base_for_ML-checkpoint.ipynb
src/hospital_kitchen_project/data/: children.csv  ingredients.csv  meals.csv
transformations/models/: sources.yml
transformations/models/marts/: fct_admissions_daily.sql  fct_children_rejected.sql  fct_consumption_events.sql  fct_rejected_meals.sql  fct_ward_consumption.sql
transformations/models/staging/: stg_children.sql  stg_consumption.sql  stg_ingredients.sql  stg_meals.sql
