[project]
name = "hospital-kitchen-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Gabryel Januario",email = "gabryeelcomy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyarrow (>=21.0.0,<22.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "dbt (>=1.0.0.40.5,<2.0.0.0.0)",
    "dbt-core (>=1.10.9,<2.0.0)",
    "dbt-postgres (>=1.9.0,<2.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "xgboost (>=3.0.4,<4.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)"
]

[tool.poetry]
packages = [{include = "hospital_kitchen_project", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
